View Issue Details

IDProjectCategoryView StatusLast Update
0030469Open CASCADEOCCT:Visualizationpublic2019-03-05 13:46
ReporteremvAssigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
Product Version7.1.0 
Target Version7.4.0Fixed in Version7.4.0 
Summary0030469: Visualization - Draw crashes when 3D view is minimized
DescriptionDraw Test Harness crashes when 3D view is minimized. The crash happens in OpenGl_BVHTreeSelector::SetViewportSize method. The pixel size is computed as
myPixelSize = Max (theResolutionRatio / theViewportHeight,
                     theResolutionRatio / theViewportWidth);

but when the 3D view is minimized the input parameters theViewportWidth and theViewportHeight are both zero.
Steps To Reproduce1. load DRAW
2. create model and display it
box b 1 1 1
vdisplay b
3. minimize the 3D view
4. try opening the view again

pload MODELING VISUALIZATION
dsetsignal 1
box b 1 1 1
vdisplay -dispMode 1 b
vrenderparams -msaa 9
vfit
vzbufftrihedron
vmoveto 200 200
# minimize
TagsNo tags attached.
Test case numberNot needed

Activities

git

2019-02-01 16:25

administrator   ~0081989

Branch CR30469 has been created by kgv.

SHA-1: 49de354c8882e4e0da701c44e183c64d461a9aa7


Detailed log of new commits:

Author: kgv
Date: Fri Feb 1 16:20:24 2019 +0300

    0030469: Visualization - Draw crashes when 3D view is minimized
    
    OpenGl_BVHTreeSelector::SetViewportSize() - added protection from FPE.

git

2019-02-01 16:39

administrator   ~0081990

Branch CR30469 has been updated forcibly by kgv.

SHA-1: fc8059fdad6b78a4155b049ed0c41b3a29484336

kgv

2019-02-01 16:40

developer   ~0081991

Patch is ready for review.

san

2019-02-04 16:01

developer   ~0082026

Branch CR30469 reviewed without remarks.

bugmaster

2019-02-05 14:05

administrator   ~0082035

tested in framework WEEK-6 branch


Combination -
OCCT branch : WEEK-6 SHA - 95c882e9d45466a9e296f33fb6a10289cf40332f
Products branch : WEEK-6 SHA - 72707298a0e5543f74709bf9d0186c8b8960ca25
was compiled on Linux, MacOS and Windows platforms and tested in optimize mode.

Number of compiler warnings:
No new/fixed warnings

Regressions/Differences/Improvements:
No regressions/differences

CPU differences:
Debian80-64:
OCCT
Total CPU difference: 16368.269999999928 / 16363.790000000015 [+0.03%]
Products
Total CPU difference: 7176.410000000036 / 7177.480000000016 [-0.01%]
Windows-64-VC14:
OCCT
Total CPU difference: 17772.359375 / 17773.921875 [-0.01%]
Products
Total CPU difference: 8601.046875 / 8604.828125 [-0.04%]


Image differences :
No differences that require special attention

Memory differences :
No differences that require special attention

git

2019-03-05 13:46

administrator   ~0082629

Branch CR30469 has been deleted by kgv.

SHA-1: fc8059fdad6b78a4155b049ed0c41b3a29484336

Related Changesets

occt: master d918208a

2019-02-01 13:20:24

kgv


Committer: bugmaster Details Diff
0030469: Visualization - Draw crashes when 3D view is minimized

OpenGl_View::Redraw() - avoid rendering into window of zero size (leading to FPE and other issues).
Affected Issues
0030469
mod - src/OpenGl/OpenGl_BVHTreeSelector.cxx Diff File
mod - src/OpenGl/OpenGl_View_Redraw.cxx Diff File

Issue History

Date Modified Username Field Change
2019-02-01 14:52 emv New Issue
2019-02-01 14:52 emv Assigned To => kgv
2019-02-01 15:07 kgv Steps to Reproduce Updated
2019-02-01 16:25 git Note Added: 0081989
2019-02-01 16:34 kgv Steps to Reproduce Updated
2019-02-01 16:39 git Note Added: 0081990
2019-02-01 16:40 kgv Note Added: 0081991
2019-02-01 16:40 kgv Assigned To kgv => san
2019-02-01 16:40 kgv Status new => resolved
2019-02-01 16:44 kgv Product Version 7.3.0 => 7.1.0
2019-02-04 16:01 san Note Added: 0082026
2019-02-04 16:01 san Assigned To san => bugmaster
2019-02-04 16:01 san Status resolved => reviewed
2019-02-04 16:34 bugmaster Test case number => Not needed
2019-02-05 14:05 bugmaster Note Added: 0082035
2019-02-05 14:05 bugmaster Status reviewed => tested
2019-02-10 19:36 bugmaster Changeset attached => occt master d918208a
2019-02-10 19:36 bugmaster Status tested => verified
2019-02-10 19:36 bugmaster Resolution open => fixed
2019-03-05 13:46 git Note Added: 0082629