0030469: Visualization - Draw crashes when 3D view is minimized

OpenGl_View::Redraw() - avoid rendering into window of zero size (leading to FPE and other issues).